# WAL-parser-sqlite

./: CMakeLists.txt  README.md  build.sh  main.cpp
src/: Types.h
src/ArgParsing/: ArgValues.h  ArgsParsing.cpp  ArgsParsing.h
src/Converters/: Endian.h  FromData.h  VarInt.h
src/Formatters/: CSVFormatter.cpp  CSVFormatter.h  Factory.h  Formatter.h  SchemaFormatter.cpp  SchemaFormatter.h
src/Formatters/Input/: FileInput.cpp  FileInput.h  InputType.h  StringInput.h
src/Formatters/utils/: Tokenizers.h
src/Readers/: BTreeReader.cpp  BTreeReader.h  FrameHeader.h  RecordHeaderDataType.cpp  RecordHeaderDataType.h  RecordHeaderReader.cpp  RecordHeaderReader.h  WalHeaderReader.h
src/Utils/: FixedRuntimeArray.h  Log.cpp  Log.h
tests/: BigEndianConvertTest.cpp  CMakeLists.txt  FixedRuntimeArrayTests.cpp  RecordHeaderReaderTests.cpp  SchemaFormatterTests.cpp  TestBase.cpp  TestBase.h  TestUtils.h
